--- a/src/AwardMe/AwardMeBundle/Resources/public/css/popup.css
+++ b/src/AwardMe/AwardMeBundle/Resources/public/css/popup.css
@@ -49,7 +49,8 @@
 
 #popup_publication{
     background: #41474c;
-    height: 200px;
+    min-height: 200px;
+    padding-bottom: 10px;
 }
 
 #popup_publication h3.title{
@@ -93,17 +94,95 @@
     font-size: 1em;
 }
 
-#popup_publication_ctt input[type=submit].submit{
+#popup_publication input[type=submit].submit-pub{
     background: url('../images/ico/png_white/keyboard@2x.png') #f2b540 no-repeat left;
-    opacity: .20;
     background-size: 24px;
     text-indent: 17px;
     padding: 5px 10px;
     border: 1px solid transparent;
     color: #ffffff;
     border-radius: 4px;
+    float: left;
 }
 
+#legende{ margin-left: 160px; color: #FFFFFF; font-size: 11px; }
+
+/*-- POPUP AVATAR --*/
+#popup_avatar{
+    background: #41474c;
+    min-height: 200px;
+    padding-bottom: 10px;
+}
+
+#popup_avatar h3.title{
+    text-align: center;
+    padding: 5px 0;
+    color: #7c7a7a;
+    background: #FFFFFF;
+    margin: -20px -20px 20px -20px;
+    box-shadow: 2px 2px 5px #000000;
+}
+
+#popup_avatar_ctt{
+    margin-left: 120px;
+}
+#popup_avatar_ctt h4.step{
+    color: #f2b540;
+    padding-bottom: 5px;
+    border-bottom: 1px dashed #000000;
+    margin-bottom: 10px;
+}
+
+#popup_avatar_ctt input[type=file].change-avatar{
+    width: 350px;
+    border: 1px solid #0088CC;
+    border-radius: 4px;
+    margin: 0 auto;
+    background: #FFFFFF;
+    -webkit-apparence:none;
+    padding: 10px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+
+#popup_avatar_ctt input[type=file]::-webkit-file-upload-button{ /*modification du bouton*/
+    -webkit-apparence:none;
+    background:#ecf0f1 none;
+    border: 1px solid transparent;
+    width: 150px;
+    margin: -10px;
+    padding: 10px;
+}
+
+#popup_avatar_ctt input[type=text].change-avatar{
+    padding: 10px;
+    width: 350px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+#popup_avatar input[type=submit].submit-avatar{
+    background: url('../images/ico/png_white/keyboard@2x.png') #f2b540 no-repeat left;
+    background-size: 24px;
+    text-indent: 17px;
+    padding: 5px 10px;
+    border: 1px solid transparent;
+    color: #ffffff;
+    border-radius: 4px;
+    margin-left: 120px;
+}
+
+#popup_avatar_avatar{
+    float: left;
+    margin-right: 20px;
+}
+
+#popup_avatar_avatar img.actual{
+    width: 100px;
+    height: auto;
+}
 
 
 
