--- a/src/AwardMe/AwardMeBundle/Resources/views/Template/menu.html.twig
+++ b/src/AwardMe/AwardMeBundle/Resources/views/Template/menu.html.twig
@@ -1,7 +1,7 @@
 <div id="user-menu">
     <div id="user-avatar">
-        <img src="{{ asset('bundles/awardme/images/avatars/amandine.jpg') }}" alt="" class="avatar"/>
-        <h4 id="username">Amandine Gautier</h4>
+        <img src="{{ asset('bundles/user/images/avatars/'~ app.user.avatar.path ) }}" alt="{{ app.user.username }}" class="avatar"/>
+        <h4 id="username"> {{ app.user.username }}  </h4>
         <p class="logout"><a href="{{ path('fos_user_profile_show') }}" class="profil">Mon profil </a> - <a href="{{ path('fos_user_security_logout') }}" class="profil">Déconnexion</a> </p>
     </div>
 
