--- a/src/AwardMe/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/AwardMe/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'FOSUserBundle' %}`
 
-<h2 class="zone">Zone d'identification</h2>
+<h2 class="zone">Zone d'inscription</h2>
 
 <div id="fos-register">
 
