--- a/app/Resources/views/base_neutre.html.twig
+++ b/app/Resources/views/base_neutre.html.twig
@@ -9,21 +9,26 @@
         'bundles/awardme/css/reset.css'
         'bundles/awardme/css/style.css'
         'bundles/awardme/css/neutral.css'
-        'bundles/user/css/user.css'
         %}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
         {% endstylesheets %}
     {% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
-<body
+<body>
+
 <div id="site">
 
     <div id="neutral-header">
         <div id="neutral-header-box"><h1 id="title"><a href="{{ path('award_me_homepage') }}" id="title">AwardMe</a></h1></div>
     </div>
+    <div id="neutral-content">
+
     {% block content %} {% endblock %}
 
+    </div>
+
 </div>
+
 </body>
 </html>
