--- a/src/AwardMe/AwardMeBundle/Resources/public/css/accueil.css
+++ b/src/AwardMe/AwardMeBundle/Resources/public/css/accueil.css
@@ -77,8 +77,7 @@
     padding: 5px;
     background: #373d43;
     overflow: hidden;
-    margin: 10px;
-    margin-top: 125px;
+    margin: 125px 10px 10px 10px;
 }
 
 #box-propose h3.box-title-suggestion{
@@ -150,33 +149,36 @@
     float: left;
     width: 400px;
     padding: 15px;
-    border: 2px solid #f0863a;
+    border: 1px solid rgba(0, 0, 0, .15);
+    -webkit-border-radius: 3px;
+    -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .3);
     border-radius: 4px;
     margin: 0px 10px 10px 10px;
     background: #FFFFFF;
 }
 
 .challenge{
-    border: 2px solid #f2b540;
+    border: 1px solid transparent;
 }
 
 .ami{
-    border: 2px solid #f16867;
+    border: 1px solid transparent;
 }
 
 .reussite{
-    border: 2px solid #4ba8a6;
+    border: 1px solid transparent;
 }
 
-.box-diary h3.diary-username{
+.box-diary h4.diary-username{
     padding-bottom: 5px;
     border-bottom: 1px solid #333333;
     margin-bottom: 10px;
+    color: #f16867;
 }
 
 .box-diary span.option{
     font-size: 11px;
-    color: #4fb1af;
+    color: #31373c;
 }
 
 .box-diary img.user-avatar{
@@ -217,7 +219,7 @@
 }
 
 .box-diary-options a.opt, a.opt-hide{
-    color: #4fb1af;
+    color: #31373c;
 }
 
 .box-diary-options a.opt:hover, a.opt-hide:hover{
@@ -273,7 +275,6 @@ div.options-box a.options-list:hover{
 div#legende{
     color: #FFFFFF;
     width: 250px;
-    float: right;
     text-align: left;
     margin-right: 5px;
     font-size: 11px;
