--- a/src/AwardMe/AwardMeBundle/Resources/public/css/neutral.css
+++ b/src/AwardMe/AwardMeBundle/Resources/public/css/neutral.css
@@ -3,17 +3,27 @@
     display: inline;
 }
 
+#neutral-content{
+    width: 1000px;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+
 h2.zone{
     width: 1000px;
     margin: 0 auto;
-    color: #FFFFFF;
+    color: #333333;
     margin-bottom: 50px;
 }
 
 #neutral-header{
-    background: #FFFFFF;
+    background: #373d43;
+    color: #7c7a7a;
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .15);
+    -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .3);
     width: 100%;
-    border-bottom: 2px solid #303030;
+    height: 50px;
 }
 
 #neutral-header-box{
@@ -29,21 +39,22 @@ h2.zone{
     font-family: helvetica, "Lucida Grande", arial, sans-serif;
 }
 
-#fos-register{
+#fos-register, #fos-login{
     width: 510px;
     margin: 0 auto;
     background: #373d43;
+    color: #FFFFFF;
     border-radius: 4px;
     padding: 20px 10px 20px 20px;
 }
 
-#fos-register label.signin_label{
+#neutral-content label.signin_label{
     width: 200px;
     color: #FFFFFF;
     display: inline-block;
 }
 
-#fos-register input[type=text].signin, input[type=email].signin, input[type=password].signin{
+#neutral-content input[type=text].signin, input[type=email].signin, input[type=password].signin{
     padding: 10px 0px;
     text-indent: 10px;
     width: 240px;
@@ -55,7 +66,7 @@ h2.zone{
     color: #303030;
 }
 
-#fos-register input[type=submit].signin-sub{
+#neutral-content input[type=submit].signin-sub{
     background: #febf01;
     padding: 10px 20px;
     border: 1px solid transparent;
@@ -63,6 +74,7 @@ h2.zone{
     text-transform: uppercase;
     border-radius: 4px;
     font-weight: bold;
+    margin-top: 10px;
 }
 
 #fos-register-confirm{
