--- a/src/AwardMe/AwardMeBundle/Resources/public/css/popup.css
+++ b/src/AwardMe/AwardMeBundle/Resources/public/css/popup.css
@@ -105,7 +105,7 @@
     float: left;
 }
 
-#legende{ margin-left: 160px; color: #FFFFFF; font-size: 11px; }
+#legende_popup{ color: #FFFFFF; font-size: 11px; margin-left: 170px }
 
 /*-- POPUP AVATAR --*/
 #popup_avatar{
