--- a/src/AwardMe/AwardMeBundle/Resources/views/Formulaires/Publication.html.twig
+++ b/src/AwardMe/AwardMeBundle/Resources/views/Formulaires/Publication.html.twig
@@ -15,7 +15,7 @@
 
         <div>
             <input type="submit" value="Publier maintenant"  class="submit-pub"/>
-            <div id="legende" class="insuffisant"></div>
+            <div id="legende_popup" class="insuffisant"></div>
         </div>
        </form>
     </div>
