--- a/src/AwardMe/AwardMeBundle/Resources/views/Template/menu.html.twig
+++ b/src/AwardMe/AwardMeBundle/Resources/views/Template/menu.html.twig
@@ -24,7 +24,7 @@
         </a>
 
         <a href="#" class="menu">
-        <li class="selected">Challenge <span class="ico">
+        <li class="selected-menu">Challenge <span class="ico">
                  <img src="{{ asset('bundles/awardme/images/ico/png_white/list2@2x.png') }}" alt="" class="ico-selected"/>
         </span></li>
         </a>
