--- a/src/AwardMe/AwardMeBundle/Resources/views/Accueil/accueil_content.html.twig
+++ b/src/AwardMe/AwardMeBundle/Resources/views/Accueil/accueil_content.html.twig
@@ -86,9 +86,9 @@
 
 
         {% for p in publications %}
-
+        {% set avatar_path =  'bundles/user/images/avatars/'~ p.user.avatar.path %}
             <div class="box-diary">
-                <img src="{{ asset('bundles/user/images/avatars/'~ p.user.avatar.path ) }}" alt="" class="user-avatar"/>
+                <img src="{{ avatar_path | imagine_filter('my_avatar') }}" alt="" class="user-avatar"/>
                 <h4 class="diary-username">{{ p.user.username }}, <span class="option">{{ p.date|date('d M y') }} à {{ p.date|date('H:i') }} </span></h4>
 
                     {% if p.path is defined %}
@@ -111,12 +111,12 @@
                         <div class="options-box" id="options-box-{{ p.id }}">
                             <ul id="options-ul">
 
-                                <li class="options-li"><a href="#" rel="{{ p.id }}"{% if p.path is defined %} class="options-list-img" {% else %} class="options-list" {% endif %}>Ne plus afficher cette publication.</a></li>
+                                <a href="#" rel="{{ p.id }}"{% if p.path is defined %} class="options-list-img" {% else %} class="options-list" {% endif %}><li class="options-li">Ne plus afficher cette publication.</li></a>
 
 
                                 <li class="options-li"><a href="#" class="options-list">Signaler le contenu.</a></li>
                                 <li class="options-li"><a href="#" class="options-list">Ajouter l'auteur à mes amis.</a></li>
-                                <li class="options-li"><a href="#" data-width="500" {% if p.path is defined %} data-rel="popup_update-img-{{ p.id }}" {% else %}data-rel="popup_update-{{ p.id }}" {% endif %}class="poplight">Modifier ma publication</a></li>
+                                <a href="#" data-width="500" {% if p.path is defined %} data-rel="popup_update-img-{{ p.id }}" {% else %}data-rel="popup_update-{{ p.id }}" {% endif %}class="poplight"><li class="options-li">Modifier ma publication</li></a>
                             </ul>
                         </div>
 
